@startuml

Alumno --> "0..*"Materia
Inscripcion o--"*" Materia
Inscripcion o-- Alumno
Materia --> "0..*"Materia

class Inscripcion {
- alumno: Alumno
- asignaturas: List<Materia>
+ aprobada(): boolean
}

class Materia {
- correlativas: List<Materia>
+ puedeCursar(alumno: Alumno): boolean
}

class Alumno {
- aprobadas: List<Materia>
}

@enduml